<resources>
    <string name="app_name">Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">login</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preferences_file_name">Avengers Preferences</string>
    <string name="btn_send">send</string>
    <string name="btn_logout">logout</string>
</resources>